Bug 110241 - redo ftp control connection parsing code r=dougt, sr=darin